--- a/index.html
+++ b/index.html
@@ -1,26 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta http-equiv="X-UA-Compatible" content="ie=edge">
  <!-- bootstrap css -->
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<!-- main css -->
-<link rel="stylesheet" href="css/main.css">
-<!-- google fonts -->
-<link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
+ <link rel="stylesheet" href="css/bootstrap.min.css">
+ <!-- main css -->
+ <link rel="stylesheet" href="css/main.css">
+ <!-- google fonts -->
+ <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
 
-<!-- font awesome -->
-<script src="js/fontawesome-all.min.js"></script> 
-<title>Starter Template</title>
+ <!-- font awesome -->
+ <script src="js/fontawesome-all.min.js"></script>
+ <title>Starter Template</title>
+ <style>
+ </style>
 </head>
-<body>
 
-<h1>Hello This is starter package</h1>
-<!-- bootstrap js -->
+<body>
+ <header class="header">
+  <div class="container-fluid">
+   <div class="row height-60  align-items-center">
+    <div class="col col-md-9 ml-auto text-right pr-5">
+
+     <h6 class="title-heading d-inline-block p-2 text-uppercase">the all new</h6>
+     <h2 class="text-uppercase my-2 title">2018 mercedes-benz</h2>
+     <h3 class="text-uppercase">model name</h3>
+     <h6 class="text-capitalize">starts from</h6>
+     <h2>$60,000
+      <a href="#" class="title-icon d-inline-block mx-2">
+       <i class="fas fa-play "></i>
+      </a>
+     </h2>
+    </div>
+   </div>
+  </div>
+ </header>
+ <!-- skills -->
+ <section class="skills py-5">
+  <div class="row">
+   <!-- single skill -->
+   <div class="col-sm-6 col-lg-3 text-center my-3">
+    <a href="#" class="skills-icon p-2 rounded-circle">
+     <i class="fas fa-car fa-fw"></i>
+    </a>
+    <h4 class="text-uppercase font-weight-bold my-3">all brands</h4>
+    <div class="skills-underline"></div>
+    <p class="w-75 mx-auto text-muted"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut, ipsum.</p>
+   </div>
+   <!-- end of single skill -->
+   <!-- single skill -->
+   <div class="col-sm-6 col-lg-3 text-center my-3">
+    <a href="#" class="skills-icon p-2 rounded-circle">
+     <i class="far fa-comments fa-fw"></i>
+    </a>
+    <h4 class="text-uppercase font-weight-bold my-3">free support</h4>
+    <div class="skills-underline"></div>
+    <p class="w-75 mx-auto text-muted"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut, ipsum.</p>
+   </div>
+   <!-- end of single skill -->
+   <!-- single skill -->
+   <div class="col-sm-6 col-lg-3 text-center my-3">
+    <a href="#" class="skills-icon p-2 rounded-circle">
+     <i class="fas fa-people-carry fa-fw"></i>
+    </a>
+    <h4 class="text-uppercase font-weight-bold my-3">caring</h4>
+    <div class="skills-underline"></div>
+    <p class="w-75 mx-auto text-muted"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut, ipsum.</p>
+   </div>
+   <!-- end of single skill -->
+   <!-- single skill -->
+   <div class="col-sm-6 col-lg-3 text-center my-3">
+    <a href="#" class="skills-icon p-2 rounded-circle">
+     <i class="fas fa-wallet fa-fw"></i>
+    </a>
+    <h4 class="text-uppercase font-weight-bold my-3">affordable</h4>
+    <div class="skills-underline"></div>
+    <p class="w-75 mx-auto text-muted"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut, ipsum.</p>
+   </div>
+   <!-- end of single skill -->
+  </div>
+ </section>
+ <!--end of skills -->
+
+
+
+
+
+
+
+ <!-- bootstrap js -->
  <script src="js/bootstrap.bundle.min.js"></script>
  <!-- script js -->
-<script src="js/script.js"></script>
+ <script src="js/script.js"></script>
 </body>
+
 </html>
