one more gallery sectio

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
 
           <div class="card car-card ">
-            <img src="img/car-1.jpeg" class="card-img-top car-img" alt="">
+            <img src="img/car-german-1.jpeg" class="card-img-top car-img" alt="">
             <!-- card body -->
             <div class="card-body">
               <div class="car-info d-flex justify-content-between">
@@ -222,7 +222,7 @@
         <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
 
           <div class="card car-card ">
-            <img src="img/car-2.jpeg" class="card-img-top car-img" alt="">
+            <img src="img/car-american-1.jpeg" class="card-img-top car-img" alt="">
             <!-- card body -->
             <div class="card-body">
               <div class="car-info d-flex justify-content-between">
@@ -266,7 +266,7 @@
         <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
 
           <div class="card car-card ">
-            <img src="img/car-3.jpeg" class="card-img-top car-img" alt="">
+            <img src="img/car-german-2.jpeg" class="card-img-top car-img" alt="">
             <!-- card body -->
             <div class="card-body">
               <div class="car-info d-flex justify-content-between">
@@ -310,7 +310,7 @@
         <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
 
           <div class="card car-card ">
-            <img src="img/car-4.jpeg" class="card-img-top car-img" alt="">
+            <img src="img/car-american-2.jpeg" class="card-img-top car-img" alt="">
             <!-- card body -->
             <div class="card-body">
               <div class="car-info d-flex justify-content-between">
@@ -354,7 +354,7 @@
         <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
 
           <div class="card car-card ">
-            <img src="img/car-5.jpeg" class="card-img-top car-img" alt="">
+            <img src="img/car-german-3.jpeg" class="card-img-top car-img" alt="">
             <!-- card body -->
             <div class="card-body">
               <div class="car-info d-flex justify-content-between">
@@ -398,7 +398,7 @@
         <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
 
           <div class="card car-card ">
-            <img src="img/car-6.jpeg" class="card-img-top car-img" alt="">
+            <img src="img/car-american-3.jpeg" class="card-img-top car-img" alt="">
             <!-- card body -->
             <div class="card-body">
               <div class="car-info d-flex justify-content-between">
@@ -555,7 +555,7 @@
         <div class="col-10 mx-auto col-lg-6 featured-img my-2 align-self-center">
           <!-- img container -->
           <div class="img-container">
-            <img src="img/car-7.jpeg" class="img-fluid featured-photo" alt="">
+            <img src="img/car-default.jpeg" class="img-fluid featured-photo" alt="">
             <a href="#" class="featured-link">
               <i class="fas fa-search"></i>
             </a>
@@ -565,7 +565,66 @@
       </div>
   </section>
   <!--end of featured cars section-->
+  <!-- gallery -->
+  <section class="gallery py-5" id="gallery">
+    <div class="container">
+      <!-- section title -->
+      <div class="row my-5">
+        <div class="col d-flex flex-wrap text-uppercase justify-content-center">
+          <h1 class="font-weight-bold align-self-center mx-1">
+            our
+          </h1>
+          <h1 class="section-title--special mx-1">gallery</h1>
+        </div>
+      </div>
+      <!-- end of section title -->
+      <div class="row">
+        <div class="col-sm-6 ">
+          <div class="gallery-item">
 
+            <img src="img/car-american-1.jpeg" alt="" class="img-fluid gallery-img">
+          </div>
+        </div>
+        <div class="col-sm-6 d-flex flex-column justify-content-between">
+          <!-- single row -->
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="gallery-item">
+                <img src="img/car-german-1.jpeg" alt="" class="img-fluid gallery-img">
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="gallery-item">
+
+                <img src="img/car-american-2.jpeg" alt="" class="img-fluid gallery-img">
+              </div>
+            </div>
+          </div>
+          <!-- end of single row -->
+          <!-- single row -->
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="gallery-item">
+
+                <img src="img/car-american-3.jpeg" alt="" class="img-fluid gallery-img">
+              </div>
+
+            </div>
+            <div class="col-sm-6">
+              <div class="gallery-item">
+
+                <img src="img/car-german-1.jpeg" alt="" class="img-fluid gallery-img">
+              </div>
+            </div>
+          </div>
+          <!-- end of single row -->
+
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+  <!--end of  gallery -->
   <!-- contact section -->
   <section class="contact py-5" id="contact">
     <div class="container">
@@ -668,7 +727,7 @@
       <!-- end of section title -->
       <div class="row">
         <!-- single card -->
-        <div class="col-10 mx-auto my-3 col-md-6 col-lg-4 ">
+        <div class="col-10 mx-auto my-5 col-md-6 col-lg-4 ">
           <div class="card">
             <img src="img/car-8.jpeg" alt="" class="card-img-top">
             <!-- card body -->
@@ -678,8 +737,8 @@
                 <h5 class="customer-name text-capitalize">customer name</h5>
               </div>
               <h6 class="customer-job text-capitalize">customer job</h6>
-              <p class="customer-quote text-center mx-auto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, fugiat voluptatem! Consequatur maiores ex
-                quidem obcaecati perspiciatis porro itaque soluta.</p>
+              <p class="customer-quote text-center mx-auto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio,
+                fugiat voluptatem! Consequatur maiores ex quidem obcaecati perspiciatis porro itaque soluta.</p>
               <span class="customer-icon">
                 <i class="fas fa-quote-left"></i>
               </span>
@@ -692,7 +751,7 @@
         </div>
         <!-- end of single card -->
         <!-- single card -->
-        <div class="col-10 mx-auto my-3 col-md-6 col-lg-4 ">
+        <div class="col-10 mx-auto my-5 col-md-6 col-lg-4 ">
           <div class="card">
             <img src="img/car-9.jpeg" alt="" class="card-img-top">
             <!-- card body -->
@@ -702,8 +761,8 @@
                 <h5 class="customer-name text-capitalize">customer name</h5>
               </div>
               <h6 class="customer-job text-capitalize">customer job</h6>
-              <p class="customer-quote text-center mx-auto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, fugiat voluptatem! Consequatur maiores ex
-                quidem obcaecati perspiciatis porro itaque soluta.</p>
+              <p class="customer-quote text-center mx-auto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio,
+                fugiat voluptatem! Consequatur maiores ex quidem obcaecati perspiciatis porro itaque soluta.</p>
               <span class="customer-icon">
                 <i class="fas fa-quote-left"></i>
               </span>
@@ -716,7 +775,7 @@
         </div>
         <!-- end of single card -->
         <!-- single card -->
-        <div class="col-10 mx-auto my-3 col-md-6 col-lg-4 ">
+        <div class="col-10 mx-auto my-5 col-md-6 col-lg-4 ">
           <div class="card">
             <img src="img/car-10.jpeg" alt="" class="card-img-top">
             <!-- card body -->
@@ -726,8 +785,8 @@
                 <h5 class="customer-name text-capitalize">customer name</h5>
               </div>
               <h6 class="customer-job text-capitalize">customer job</h6>
-              <p class="customer-quote text-center  mx-auto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, fugiat voluptatem! Consequatur maiores ex
-                quidem obcaecati perspiciatis porro itaque soluta.</p>
+              <p class="customer-quote text-center  mx-auto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio,
+                fugiat voluptatem! Consequatur maiores ex quidem obcaecati perspiciatis porro itaque soluta.</p>
               <span class="customer-icon">
                 <i class="fas fa-quote-left"></i>
               </span>
