--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
         <div class="col-10 mx-auto col-lg-6 featured-img my-2 align-self-center">
           <!-- img container -->
           <div class="img-container">
-            <img src="img/car-default.jpeg" class="img-fluid featured-photo" alt="">
+            <img src="img/featured.jpeg" class="img-fluid featured-photo" alt="">
             <a href="#" class="featured-link">
               <i class="fas fa-search"></i>
             </a>
@@ -729,7 +729,7 @@
         <!-- single card -->
         <div class="col-10 mx-auto my-5 col-md-6 col-lg-4 ">
           <div class="card">
-            <img src="img/car-8.jpeg" alt="" class="card-img-top">
+            <img src="img/car-american-1.jpeg" alt="" class="card-img-top">
             <!-- card body -->
             <div class="card-body text-center customer-card-body">
               <img src="img/customer-1.jpg" class="rounded-circle customer-img" alt="">
@@ -753,7 +753,7 @@
         <!-- single card -->
         <div class="col-10 mx-auto my-5 col-md-6 col-lg-4 ">
           <div class="card">
-            <img src="img/car-9.jpeg" alt="" class="card-img-top">
+            <img src="img/car-american-2.jpeg" alt="" class="card-img-top">
             <!-- card body -->
             <div class="card-body text-center customer-card-body">
               <img src="img/customer-2.jpg" class="rounded-circle customer-img" alt="">
@@ -777,7 +777,7 @@
         <!-- single card -->
         <div class="col-10 mx-auto my-5 col-md-6 col-lg-4 ">
           <div class="card">
-            <img src="img/car-10.jpeg" alt="" class="card-img-top">
+            <img src="img/car-american-3.jpeg" alt="" class="card-img-top">
             <!-- card body -->
             <div class="card-body text-center customer-card-body">
               <img src="img/customer-3.jpg" class="rounded-circle customer-img" alt="">
