--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- nav -->
   <nav class="navbar navbar-expand-lg  px-3" id="navbar">
     <a class="navbar-brand" href="#">
-      <img src="img/logo.png" alt="">
+      <img src="img/gearLogo.png" alt="">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
       <span class="navbar-icon">
